# game-console

./: .clang-format  .clangd  .clangd-emulator  .gitignore  CMakeLists.txt  DEV_Config.cpp  DEV_Config.h  GUI_Paint.cpp  LCD_Driver.h  README.md  console-enclosure-todo.md  emulator_config.h.in  emulator_entrypoint.cpp  filp-clangd-config.sh  flip-clangd-config.sh  font24CN.cpp  game2048.c  game2048.cpp  game2048.h  game_console.ino  input.cpp  input.h  sketch.yaml  todo.md  ui.cpp  ui.h  user_interface.cpp  user_interface.h
emulator/: emulator_entrypoint.cpp
sfml-playground/: sfml-app
src/common/: compatibility.hpp  config_menu.h  configuration.cpp  configuration.h  configuration.hpp  constants.hpp  display.h  font_size.hpp  input.cpp  input.h  logging.cpp  logging.hpp  maths_utils.cpp  maths_utils.hpp  point.cpp  point.h  point.hpp  user_interface.cpp  user_interface.h  user_interface.hpp  user_interface_customization.cpp  user_interface_customization.hpp
src/common/controller/: controller.hpp  joystick_controller.cpp  joystick_controller.hpp  keypad_controller.cpp  keypad_controller.hpp
src/common/display/: display.hpp  lcd_display.cpp  lcd_display.hpp
src/common/platform/: README.md  constants.h  controller.cpp
src/common/platform/arduino/: arduino_delay.cpp  joystick_controller.cpp  joystick_controller.hpp  keypad_controller.cpp  keypad_controller.hpp  lcd_display.cpp  lcd_display.hpp  persistent_storage.hpp
src/common/platform/emulator/: font_provider.cpp  persistent_storage.cpp  persistent_storage.inl  sfml_display.cpp  sfml_display.hpp
src/common/platform/interface/: color.cpp  color.hpp  controller.cpp  controller.hpp  delay.hpp  direction.cpp  direction.hpp  display.hpp  input.cpp  input.hpp  persistent_storage.hpp  platform.hpp
src/common/platform/sfml/: emulator_delay.cpp  font_provider.cpp  font_provider.hpp  sfml_awsd_controller.hpp  sfml_controller.cpp  sfml_controller.hpp  sfml_display.cpp  sfml_display.hpp  sfml_example.cpp  sfml_example.hpp
src/common/timing/: delay.hpp
src/config/: DEV_Config.cpp  DEV_Config.h
src/fonts/: font12.cpp  font24.cpp  fonts.h
src/games/: 2048.cpp  2048.h  2048.hpp  common_transitions.cpp  common_transitions.hpp  game_executor.hpp  game_menu.cpp  game_menu.hpp  game_of_life.cpp  game_of_life.hpp  minesweeper.cpp  minesweeper.hpp  random_seed_picker.cpp  random_seed_picker.hpp  settings.cpp  settings.hpp
src/lib/: GUI_Paint.cpp  GUI_Paint.h  LCD_Driver.cpp  LCD_Driver.h
